[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/sprite/circle_main.png" type="Texture" id=1]
[ext_resource path="res://asset/sprite/circle_press.png" type="Texture" id=2]
[ext_resource path="res://asset/sprite/circle_idle.png" type="Texture" id=3]
[ext_resource path="res://asset/script/soft_joystick_input.gd" type="Script" id=4]
[ext_resource path="res://asset/script/touch_input.gd" type="Script" id=5]
[ext_resource path="res://asset/script/detection_input.gd" type="Script" id=6]
[ext_resource path="res://asset/sprite/hp.png" type="Texture" id=7]
[ext_resource path="res://asset/sprite/hp_empty.png" type="Texture" id=8]
[ext_resource path="res://asset/sprite/ammo.png" type="Texture" id=9]
[ext_resource path="res://asset/fonts/montserrat_eb_32.tres" type="DynamicFont" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 384, 548 )

[node name="touch_input" type="Node"]
script = ExtResource( 5 )

[node name="v_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_top_ui" type="HBoxContainer" parent="v_container"]
margin_right = 1024.0
margin_bottom = 100.0
grow_horizontal = 2
rect_min_size = Vector2( 1024, 100 )
rect_clip_content = true
size_flags_horizontal = 3

[node name="panel" type="Panel" parent="v_container/h_top_ui"]
margin_right = 134.0
margin_bottom = 40.0
rect_min_size = Vector2( 134, 40 )
size_flags_vertical = 0

[node name="player_name" type="Label" parent="v_container/h_top_ui/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 10 )
text = "hp"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="VBoxContainer" parent="v_container/h_top_ui"]
margin_left = 138.0
margin_right = 1024.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hit_point" type="TextureProgress" parent="v_container/h_top_ui/bar"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 40 )
size_flags_horizontal = 2
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true

[node name="h_input_ui" type="HBoxContainer" parent="v_container"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 604.0
grow_horizontal = 2
rect_min_size = Vector2( 1024, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_input" type="Control" parent="v_container/h_input_ui"]
margin_right = 338.0
margin_bottom = 500.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="area" type="Area2D" parent="v_container/h_input_ui/left_input"]
position = Vector2( 0, -92 )
script = ExtResource( 6 )

[node name="joystick" type="Sprite" parent="v_container/h_input_ui/left_input/area"]
position = Vector2( 154, 424 )
scale = Vector2( 2, 2 )

[node name="circle_main" type="Sprite" parent="v_container/h_input_ui/left_input/area/joystick"]
self_modulate = Color( 1, 1, 1, 0.32549 )
texture = ExtResource( 1 )

[node name="touchscreen_input" type="TouchScreenButton" parent="v_container/h_input_ui/left_input/area/joystick"]
self_modulate = Color( 1, 1, 1, 0.619608 )
position = Vector2( -24, -24 )
normal = ExtResource( 3 )
pressed = ExtResource( 2 )
script = ExtResource( 4 )

[node name="shape" type="CollisionShape2D" parent="v_container/h_input_ui/left_input/area"]
position = Vector2( -32, 604 )
shape = SubResource( 1 )

[node name="center_input" type="Control" parent="v_container/h_input_ui"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="right_input" type="Control" parent="v_container/h_input_ui"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ammo_left_button" type="Button" parent="v_container/h_input_ui/right_input"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -135.0
margin_right = -31.0
margin_bottom = -35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 10 )
text = "25/25"
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="joystick" from="v_container/h_input_ui/left_input/area/joystick/touchscreen_input" to="." method="_on_touchscreen_input_joystick"]
[connection signal="pressed" from="v_container/h_input_ui/right_input/ammo_left_button" to="." method="_on_ammo_left_button_pressed"]
